<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pasteSectionTitle1"
        android:background="#F4F5F8"
        android:textColor="#666666"
        android:padding="10dp" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/pasteTextEditHint"
        android:padding="6dp"
        android:layout_margin="10dp"
        android:background="@drawable/qmui_divider_bottom_bitmap"
        android:maxHeight="200dp"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pasteClipboardButton"
            android:text="@string/pasteTextButtonText"
            android:layout_margin="10dp"
            app:cornerRadius="8dp" />
    </LinearLayout>
</LinearLayout>
